WebAPINET8/kube/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mi-aplicacion-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mi-aplicacion
  template:
    metadata:
      labels:
        app: mi-aplicacion
    spec:
      containers:
      - name: mi-aplicacion-container
        image: docker.io/bryan134554/mywebapplevy:latest  # Ruta completa en Docker Hub
        ports:
        - containerPort: 80
