WebAPINET8/kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mi-aplicacion-service
spec:
  selector:
    app: mi-aplicacion  # Etiqueta para seleccionar los pods correctos
  ports:
    - protocol: TCP
      port: 80   # Puerto en el que el servicio estará expuesto dentro del clúster
      targetPort: 80  # Puerto al que se dirige el tráfico dentro del pod (donde la app escucha)
  type: NodePort  # Tipo de servicio (explicaremos esto más adelante)
